# fushin

./: .gitignore  .pre-commit-config.yaml  README.md  fushin.nimble  setup.cfg  setup.py
.github/workflows/: release.yml
docs/: fushin.html  theindex.html
docs/fushinpkg/: submodule.html  submodule.idx
src/: fushin  fushin.nim
src/fushinpkg/: submodule.nim
tests/: test1.nim
