[metadata]
name = fushin
version = "0.0.0"
description = Fetch fushinsha serif data and save as csv files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/fushin
author = eggplants
author_email = w10776e8w@yajoo.co.jp
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Mit License
    Natural Language :: Japanese
    Operating System :: MacOS :: MacOS X
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = True

[options.packages.find]
where = .
exclude = *.py, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md
include = *.c, *.h, nimbase.h

[options.package_data]
* = *.c, *.h, nimbase.h

[options.exclude_package_data]
* = *.py, *.nim, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[bdist_wheel]
universal = 1

[install_lib]
compile = 0
optimize = 2

[bdist_egg]
exclude-source-files = false
